--- a/MyClock/index.html
+++ b/MyClock/index.html
@@ -7,14 +7,14 @@
 	</head>
 	<body>
 		<div class="clock">
-			<h2 id="hour"></h2>
-			<h2 id="minute"></h2>
-			<h2 id="second"></h2>
+			<h2 id="hour" class="time"></h2>
+			<h2 id="minute" class="time"></h2>
+			<h2 id="second" class="time"></h2>
 			<h4 id="weekday"></h4>
 			<div class="date_box">
-			    <h3 id="year"></h3>
-                <h3 id="month"></h3>
-                <h3 id="date"></h3>
+			    <h3 id="year" class="date"></h3>
+                <h3 id="month" class="date"></h3>
+                <h3 id="date" class="date"></h3>
 			</div>
 		</div>
 		<script src="common.js"></script>
