finish up chatroom_demo

--- a/Chatroom_demo/src/index.html
+++ b/Chatroom_demo/src/index.html
@@ -15,19 +15,11 @@
             </div>
             <div class="displayContainer">
                 <ul class="chatList">
-                    <li>
-                        <span class="profile">
-                            <span class="user">깔깔</span>
-                            <img src="https://placeimg.com/50/50/any" alt="any">
-                        </span>
-                        <span class="message">Hello World</span>
-                        <span class="time">2:10pm</span>
-                    </li>
                 </ul>  
             </div>
             <div class="inputContainer">
                 <span>
-                    <label for="cahtInput away">채팅창</label><input type="text" id="cahtInput">
+                    <label for="chatInput away">채팅창</label><input type="text" id="chatInput">
                     <button class="send">전송</button>
                 </span>
             </div>
