add style & develop chat.js code

--- a/Chatroom_ver1.0/src/index.html
+++ b/Chatroom_ver1.0/src/index.html
@@ -17,7 +17,7 @@
                 <div class="wrap">
                     <label for="nickname">Enter your nickname.</label>
                     <input type="text" name="nickname" id="nickname">
-                    <button type="submit" id="next">Next</button>
+                    <button type="submit" id="next01">Next</button>
                 </div>
             </div>
             <div class="chatRoom">
