--- a/Chatroom_ver1.0/src/index.html
+++ b/Chatroom_ver1.0/src/index.html
@@ -10,6 +10,9 @@
     </head>
     <body>
         <div class="wrapper">
+            <div class="loader">
+                <img src="images/logo.png" alt="로고 이미지">
+            </div>
             <header>
                 <img src="images/logo_simple.png" alt="로고">
             </header>
@@ -18,6 +21,18 @@
                     <label for="nickname">Enter your nickname.</label>
                     <input type="text" name="nickname" id="nickname">
                     <button type="submit" id="next01">Next</button>
+                </div>
+            </div>
+            <div class="select02">
+                <div class="wrap">
+                    <figure class="profilePicture">
+                        <img class="myPicture" src="images/profile.png" alt="프로필 이미지" width="100">
+                    </figure>
+                    <p>Choose your profile picture.</p>
+                    <input type="file" id="selectPicture" onchange="setProfile(event)">
+                    <label for="selectPicture">Select an image</label>
+                    
+                    <button id="next02">Next</button>
                 </div>
             </div>
             <div class="chatRoom">
