--- a/MouseMovingBackground/index.html
+++ b/MouseMovingBackground/index.html
@@ -15,12 +15,12 @@
             }
 
             .background-image {
-            width: 110%;
-            height: 110%;
+            width: 150%;
+            height: 150%;
             left: 0;
             top: 0;
             position: absolute;
-            background: url(bg.jpg) no-repeat left center / cover;
+            background: url(https://cdn.pixabay.com/photo/2017/08/04/16/59/whale-2580660_1280.jpg) no-repeat left center / cover;
             transform: translate3d(0,0,0);
             transition:0.3s linear;
             transform-style: preserve-3d;
@@ -34,8 +34,8 @@
         <div class="background-image"></div>
         <script>
             
-            const windowWidth = window.innerWidth / 5; 
-            const windowHeight = window.innerHeight / 5;
+            const windowWidth = window.innerWidth / 8; 
+            const windowHeight = window.innerHeight / 8;
 
             const hoverEffect = () => {
                 this.addEventListener('mousemove', (e) => {
