--- a/MouseMovingBackground/index.html
+++ b/MouseMovingBackground/index.html
@@ -8,7 +8,7 @@
 
         <style>
             html, body {
-            min-height: 100%;
+            width:100%; 
             height: 100%;
             position: relative;
             overflow: hidden;
@@ -18,7 +18,10 @@
             width: 150%;
             height: 150%;
             left: 0;
+            right:0;
             top: 0;
+            bottom: 0;
+            margin: 0 auto;
             position: absolute;
             background: url(https://cdn.pixabay.com/photo/2017/08/04/16/59/whale-2580660_1280.jpg) no-repeat left center / cover;
             transform: translate3d(0,0,0);
