Fix codes to reach W3C web standard

--- a/Chatroom_ver1.0/src/index.html
+++ b/Chatroom_ver1.0/src/index.html
@@ -19,7 +19,7 @@
                 <img src="images/logo.png" alt="로고 이미지">
             </div>
             <header>
-                <a href="/" alt="새로고침"><img src="images/logo_simple.png" alt="로고"></a>
+                <a href="/"><img src="images/logo_simple.png" alt="로고"></a>
             </header>
             <div class="select01">
                 <div class="wrap">
