--- a/review/index.html
+++ b/review/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Function</title>
 
-        <script defer src="array-api.js"></script>
+        <script defer src="ajax.js"></script>
     </head>
     <body>
-
+        <img src="http://placehold.it/320x100" >
     </body>
 </html>
